Modelo Baseline, Features Engineering v1 y v2

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "a0516d62",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src import metrics\n",
     "from src import plots\n",
+    "from src import preprocessing\n",
+    "from src import models\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "16d50a52",
    "metadata": {},
    "outputs": [],
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "b9d1e4db",
    "metadata": {},
    "outputs": [],
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "14038bee",
    "metadata": {},
    "outputs": [
@@ -145,7 +147,7 @@
        "Compound               0        0.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "9701dc0f",
    "metadata": {},
    "outputs": [],
@@ -180,12 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0e9fe91a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "No hay NaN en la columna LapNumber\n",
+      "\n",
+      "No hay NaN en la columna Stint\n",
+      "\n",
+      "No hay NaN en la columna TyreLife\n",
+      "\n",
+      "No hay NaN en la columna Session\n",
+      "\n",
+      "No hay NaN en la columna Compound\n"
+     ]
+    }
+   ],
    "source": [
-    "cols_context = [\"Session\", \"LapNumber\", \"Stint\", \"Compound\", \"TyreLife\", \"Position\"]\n",
+    "cols_context = [\"Session\", \"LapNumber\", \"Stint\", \"Compound\", \"TyreLife\"]\n",
     "\n",
     "for col in FEATURES:\n",
     "    na_mask = df[col].isna()\n",
@@ -206,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "76dbec1b",
    "metadata": {},
    "outputs": [],
@@ -269,8 +288,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50a85dba",
+   "metadata": {},
+   "source": [
+    "Defino 4 Primeros modelos para seleccionar uno como Baseline y poder realizar Feature Engineering."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e238c5",
+   "metadata": {},
+   "source": [
+    "Entreno un RandomForest, un GradientBoosting, un Riedge y un MLP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "96496dab",
    "metadata": {},
    "outputs": [],
@@ -292,6 +327,7 @@
     "        random_state=42\n",
     "    ),\n",
     "    \"Ridge\": Ridge(alpha=1.0, random_state=42),\n",
+    "\n",
     "    \"MLP\": MLPRegressor(\n",
     "        hidden_layer_sizes=(64, 32),\n",
     "        activation=\"relu\",\n",
@@ -305,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "08e40a95",
    "metadata": {},
    "outputs": [
@@ -422,7 +458,35 @@
       "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for name, reg in models.items():\n",
+    "    res = evaluate_model_cv(name, reg, X, y, n_splits=5, random_state=42)\n",
+    "    results.append(res)\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2cf413",
+   "metadata": {},
+   "source": [
+    "Resumen de las metricas de los Modelos evaluados por Cross-Validation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "90d3807b",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -512,44 +576,344 @@
        "3  1.384126  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "results = []\n",
-    "\n",
-    "for name, reg in models.items():\n",
-    "    res = evaluate_model_cv(name, reg, X, y, n_splits=5, random_state=42)\n",
-    "    results.append(res)\n",
-    "\n",
-    "results_df = pd.DataFrame(results)\n",
-    "results_df\n"
+    "results_df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d9157e4",
+   "id": "c4526c9c",
    "metadata": {},
    "source": [
-    "OPCIONES A SEGUIR:\n",
+    "Seleccion de Modelo Baseline:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d4d6d8",
+   "metadata": {},
+   "source": [
+    "GradientBoosting es el mejor basicamente en todas las metricas o muy similares a las del RF. La diferencia no es enorme, pero si tengo que elegir uno, el GB gana.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "862c49a1",
+   "metadata": {},
+   "source": [
+    "- Tiende a generalizar un poco mejor,\n",
+    "- Suele ser más sensible a pequeños cambios de features (bueno para ver el efecto del feature engineering).\n",
+    "- Es buen candidato para tunear despues ya que puedo jugar con n_estimators, learning_rate, max_depth, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1259d19c",
+   "metadata": {},
+   "source": [
+    "Con respecto al resto de modelos\n",
+    "- RandomForest: Está muy cerca en performance. Lo usaría como segundo modelo de comparación.\n",
+    "- Ridge: Me puede servir para ver cuánto aportan las relaciones no lineales y el feature engineering. Si con nuevas features Ridge mejora mucho, se que estoy agregando información “linealmente útil”.\n",
+    "- MLP: Lo descartaría.Con pocos datos y sin tuning claramente está haciendo overfitting o underfitting y con errores gigantes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc2ba90a",
+   "metadata": {},
+   "source": [
+    "Empeizo con el Feature Engineering:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26e252d",
+   "metadata": {},
+   "source": [
+    "Features a crear:\n",
+    "(Armar lista y explicar cada una)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f59bd2",
+   "metadata": {},
+   "source": [
+    "Uso add_basic_features() de Preproccessing.py para agregar las features nuevas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8837cb30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/processed/monaco_2025_colapinto_alllaps.csv\")\n",
     "\n",
-    "Analizar los grandes errores:\n",
-    "- Mirar esas vueltas con residuo > ~2 s y ver si se concentran en:\n",
-    "- cierto stint,\n",
-    "- cierto compuesto,\n",
-    "- momentos con tráfico/lock-ups (si tenés alguna pista).\n",
+    "# Aplicar feature engineering v1\n",
+    "df_fe = preprocessing.add_basic_features(df)\n",
     "\n",
-    "Más features:\n",
-    "- Alguna medida de “fase de carrera” más explícita (por ejemplo lap_norm = LapNumber / max_laps).\n",
-    "- Features agregadas de vueltas anteriores (media de las últimas N vueltas, mejor vuelta previa, etc.).\n",
+    "# Target\n",
+    "y = df_fe[\"LapTime_s\"].to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08635136",
+   "metadata": {},
+   "source": [
+    "Redefino las columnas a utilizar:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "83c98e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['LapNumber', 'Stint', 'TyreLife', 'lap_norm_session', 'stint_len',\n",
+      "       'stint_lap_index', 'stint_lap_norm', 'tyrelife_norm_stint', 'is_race',\n",
+      "       'compound_order', 'Session', 'Compound'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "LEGAL_FEATURES_NUM = [\n",
+    "    \"LapNumber\",\n",
+    "    \"Stint\",\n",
+    "    \"TyreLife\",\n",
+    "    \"lap_norm_session\",\n",
+    "    \"stint_len\",\n",
+    "    \"stint_lap_index\",\n",
+    "    \"stint_lap_norm\",\n",
+    "    \"tyrelife_norm_stint\",\n",
+    "    \"is_race\",\n",
+    "    \"compound_order\",\n",
+    "]\n",
     "\n",
-    "Más datos\n",
-    "- Sumar los datos de Gasly de Mónaco (Mismo auto pero distinto piloto)\n",
+    "LEGAL_FEATURES_CAT = [\n",
+    "    \"Session\",\n",
+    "    \"Compound\",\n",
+    "]\n",
+    "\n",
+    "LEGAL_FEATURES_NUM = [c for c in LEGAL_FEATURES_NUM if c in df_fe.columns]\n",
+    "LEGAL_FEATURES_CAT = [c for c in LEGAL_FEATURES_CAT if c in df_fe.columns]\n",
+    "\n",
+    "FEATURES = LEGAL_FEATURES_NUM + LEGAL_FEATURES_CAT\n",
+    "X = df_fe[FEATURES].copy()\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), LEGAL_FEATURES_NUM),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), LEGAL_FEATURES_CAT),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "#printeo las columnas de x\n",
+    "print(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f76d261",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GradientBoosting_FE_v1] Fold 1: MAE=0.850, RMSE=1.265, R2=0.697\n",
+      "[GradientBoosting_FE_v1] Fold 2: MAE=0.321, RMSE=0.397, R2=0.975\n",
+      "[GradientBoosting_FE_v1] Fold 3: MAE=0.864, RMSE=1.103, R2=0.789\n",
+      "[GradientBoosting_FE_v1] Fold 4: MAE=1.157, RMSE=1.698, R2=0.258\n",
+      "[GradientBoosting_FE_v1] Fold 5: MAE=0.532, RMSE=0.692, R2=0.834\n",
+      "\n",
+      "[GradientBoosting_FE_v1] === Promedio 5 folds ===\n",
+      "MAE  medio: 0.745 ± 0.290\n",
+      "RMSE medio: 1.031 ± 0.452\n",
+      "R2   medio: 0.711 ± 0.243\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos el modelo base de Gradient Boosting\n",
+    "gb_fe = GradientBoostingRegressor(\n",
+    "    n_estimators=300,\n",
+    "    learning_rate=0.05,\n",
+    "    max_depth=3,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Evaluamos con KFold usando las nuevas features\n",
+    "gb_fe_results = evaluate_model_cv(\n",
+    "    name=\"GradientBoosting_FE_v1\",\n",
+    "    regressor=gb_fe,\n",
+    "    X=X,\n",
+    "    y=y,\n",
+    "    n_splits=5,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a80fb34",
+   "metadata": {},
+   "source": [
+    "Resumen de los Resultados del FE_v1:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab78b9d1",
+   "metadata": {},
+   "source": [
+    "Todas las metricas empeoraron. Por qué puede haber pasado: \n",
+    "- Dataset chico + más features = más riesgo de sobreajuste / ruido\n",
+    "- Metimos features muy derivadas de las mismas cosas\n",
+    "- Hay features que, desde la lógica del simulador, usan “info del futuro” (Bastante trampa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f4abb92",
+   "metadata": {},
+   "source": [
+    "Vamos a hacer una segunda version Feature Engineering v2 bastante mas conservadora."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "535f16f2",
+   "metadata": {},
+   "source": [
+    "Feature Engineering v2:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7418190",
+   "metadata": {},
+   "source": [
+    "Elimino estas features “con futuro” del DataFrame y de LEGAL_FEATURES_NUM:\n",
+    "- stint_len\n",
+    "- stint_lap_index\n",
+    "- stint_lap_norm\n",
+    "- tyrelife_norm_stint\n",
+    "\n",
+    "Me quedo con las que conceptualmente sí tienen sentido para el simulador y no duplican demasiado:\n",
+    "\n",
+    "- lap_norm_session → fase de la sesión (principio/medio/fin).\n",
+    "- is_race → modo práctica vs carrera (puede ser útil).\n",
+    "- compound_order → codifica “blando vs duro” de forma ordenada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b6014c24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEGAL_FEATURES_NUM = [\n",
+    "    \"LapNumber\",\n",
+    "    \"Stint\",\n",
+    "    \"TyreLife\",\n",
+    "    \"lap_norm_session\",\n",
+    "    \"is_race\",\n",
+    "    \"compound_order\",\n",
+    "]\n",
+    "\n",
+    "LEGAL_FEATURES_CAT = [\n",
+    "    \"Session\",\n",
+    "    \"Compound\",\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86a5db08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['LapNumber', 'Stint', 'TyreLife', 'lap_norm_session', 'is_race',\n",
+      "       'compound_order', 'Session', 'Compound'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "LEGAL_FEATURES_NUM = [c for c in LEGAL_FEATURES_NUM if c in df_fe.columns]\n",
+    "LEGAL_FEATURES_CAT = [c for c in LEGAL_FEATURES_CAT if c in df_fe.columns]\n",
+    "\n",
+    "FEATURES = LEGAL_FEATURES_NUM + LEGAL_FEATURES_CAT\n",
+    "X = df_fe[FEATURES].copy()\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), LEGAL_FEATURES_NUM),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), LEGAL_FEATURES_CAT),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "#printeo las columnas de x\n",
+    "print(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58ec1b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GradientBoosting_FE_v2] Fold 1: MAE=0.803, RMSE=1.113, R2=0.766\n",
+      "[GradientBoosting_FE_v2] Fold 2: MAE=0.408, RMSE=0.522, R2=0.957\n",
+      "[GradientBoosting_FE_v2] Fold 3: MAE=0.642, RMSE=0.908, R2=0.856\n",
+      "[GradientBoosting_FE_v2] Fold 4: MAE=1.026, RMSE=1.527, R2=0.400\n",
+      "[GradientBoosting_FE_v2] Fold 5: MAE=0.548, RMSE=0.641, R2=0.857\n",
+      "\n",
+      "[GradientBoosting_FE_v2] === Promedio 5 folds ===\n",
+      "MAE  medio: 0.685 ± 0.213\n",
+      "RMSE medio: 0.942 ± 0.358\n",
+      "R2   medio: 0.767 ± 0.193\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluamos con KFold usando las nuevas features\n",
+    "gb_fe_results = evaluate_model_cv(\n",
+    "    name=\"GradientBoosting_FE_v2\",\n",
+    "    regressor=gb_fe,\n",
+    "    X=X,\n",
+    "    y=y,\n",
+    "    n_splits=5,\n",
+    "    random_state=42\n",
+    ")"
    ]
   }
  ],
