Elimino comentarios y edito markdowns en EDA

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -46,7 +46,7 @@
    "id": "d92b92f4",
    "metadata": {},
    "source": [
-    "1) Division de los Datos"
+    "#### 1. Division de los Datos y EDA sobre los datos de Carrera"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5d258471",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
     "\n",
     "year = 2025\n",
     "gp_name = \"Monaco\"   # Monaco\n",
-    "session_name = \"R\"               # Race\n",
+    "session_name = \"R\"   # Race\n",
     "\n",
     "session = ff1.get_session(year, gp_name, session_name)\n",
     "session.load()\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e096a031",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,6 @@
    ],
    "source": [
     "print(\"Datos disponibles por cada vuelta:\\n\")\n",
-    "# Mostrar prolijamente las columnas\n",
     "for col in laps.columns: \n",
     "    print(col)\n",
     "    "
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cd9199cd",
    "metadata": {},
    "outputs": [
@@ -237,7 +236,6 @@
     }
    ],
    "source": [
-    "# 2) Filtrar las vueltas de Franco Colapinto\n",
     "driver_code = \"COL\"\n",
     "\n",
     "col_laps = laps[\n",
@@ -246,10 +244,9 @@
     "    & (~laps.get(\"Deleted\", False))   # si 'Deleted' existe y es True, la sacamos\n",
     "]\n",
     "\n",
-    "# Ordenamos por número de vuelta por prolijidad\n",
     "col_laps = col_laps.sort_values(\"LapNumber\").reset_index(drop=True)\n",
     "\n",
-    "# 3) Vector Y: tiempos de vuelta (en segundos)\n",
+    "# Vector Y: tiempos de vuelta (en segundos)\n",
     "Y = col_laps[\"LapTime\"].dt.total_seconds().to_numpy()\n",
     "\n",
     "print(f\"Nº de vueltas de Colapinto en carrera: {len(Y)}\")\n",
@@ -529,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "6edcda6d",
    "metadata": {},
    "outputs": [
@@ -547,14 +544,12 @@
    "source": [
     "plt.figure(figsize=(10, 4))\n",
     "\n",
-    "# Define color mapping for compounds\n",
     "compound_colors = {\n",
     "    \"SOFT\": \"red\",\n",
     "    \"MEDIUM\": \"gold\",\n",
     "    \"HARD\": \"gray\"\n",
     "}\n",
     "\n",
-    "# Plot each compound separately with color coding\n",
     "for compound in col_laps[\"Compound\"].dropna().unique():\n",
     "    df_comp = col_laps[col_laps[\"Compound\"] == compound].sort_values(\"LapNumber\")\n",
     "    color = compound_colors.get(compound, \"black\")\n",
@@ -769,62 +764,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5043cb27",
-   "metadata": {},
-   "source": [
-    "PROXIMOS PASOS:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25f6f842",
-   "metadata": {},
-   "source": [
-    "- Detectar outliers de LapTime (vueltas raras que quizás conviene sacar).\n",
-    "\n",
-    "- Entender cómo influye el neumático y su vida en el tiempo de vuelta.\n",
-    "\n",
-    "- Ver si el ritmo cambia mucho entre stints.\n",
-    "\n",
-    "- Ver que paso en la carrera de Colapinto en la vida real. Por ej me acuerdo que en monza se sentia mal o algo asi. (posición, laps bajo SC, etc.).\n",
-    "\n",
-    "- Tendriamos que repetir el proceso para otros circuitos a ver si notamos comportamientos similares o si detalles puntuales son solo de este circuito como la baja de tiempos post cambio de ruedas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "355ee873",
-   "metadata": {},
-   "source": [
-    "PARA PENSAR:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf5f5d29",
-   "metadata": {},
-   "source": [
-    "- Que otras formas de armar el set de train podemos usar? (Carrera+FP1+FP2+FP3 / Solo Carrera / Usar solo Carrera pero usar todos los Circuitos del calendario / Usar todo de todo)\n",
-    "\n",
-    "- Que modelos vamos a usar?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f53e4a35",
    "metadata": {},
    "source": [
-    "EDA sobre las Practicas Libres 1, 2 y 3"
+    "#### 2. EDA sobre las Practicas Libres 1, 2 y 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "407ee0b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "YEAR = 2025\n",
     "GP_NAME = \"Monaco\"  #Ronda 8 - Monaco\n",
     "DRIVER_CODE = \"COL\"\n",
@@ -1312,7 +1264,7 @@
    "id": "2987bd71",
    "metadata": {},
    "source": [
-    "Armado del dataset en base a las vueltas de Carrera y las practicas 1, 2 y 3 de Colapinto en Monaco 2025"
+    "#### 3. Armado del dataset en base a las vueltas de Carrera y las practicas 1, 2 y 3 de Colapinto en Monaco 2025"
    ]
   },
   {
@@ -1581,6 +1533,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bad85b40",
+   "metadata": {},
+   "source": [
+    "#### Uso de K-means para dividir las vueltas en Rapidas vs. Lentas:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c16c3dff",
    "metadata": {},
    "source": [
@@ -1593,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "14c0809f",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1609,7 @@
     "\n",
     "    return cut, clusters\n",
     "\n",
-    "# --- Aplicar SOLO a la carrera ---\n",
+    "# Aplicamos K-means para encontrar el corte FAST/SLOW en la carrera\n",
     "cut_race, clusters_race = kmeans_fast_lap_cut(col_laps_race, verbose=True)\n",
     "\n",
     "# Best lap de la carrera y delta respecto al corte\n",
