saco coments + edito markdowns en representaciones

--- a/representaciones.ipynb
+++ b/representaciones.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "3dfd5376",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "ff1.Cache.enable_cache(\"./cache\")  # ajustá ruta si hace falta\n",
+    "ff1.Cache.enable_cache(\"./cache\")\n",
     "\n",
     "year = 2025\n",
     "gp_name = \"Monaco Grand Prix\"\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "47cdbbfb",
    "metadata": {},
    "outputs": [
@@ -322,17 +322,17 @@
    "source": [
     "df_rep = laps.copy()\n",
     "\n",
-    "# Filtrar por LapTime válido\n",
+    "# Filtro por LapTime válido\n",
     "df_rep = df_rep[df_rep[\"LapTime\"].notna()].copy()\n",
     "\n",
-    "# Filtrar vueltas borradas si existe la columna\n",
+    "# Filtro vueltas borradas si existe la columna\n",
     "if \"Deleted\" in df_rep.columns:\n",
     "    df_rep = df_rep[~df_rep[\"Deleted\"]].copy()\n",
     "\n",
     "# Agregar LapTime_s\n",
     "df_rep[\"LapTime_s\"] = df_rep[\"LapTime\"].dt.total_seconds()\n",
     "\n",
-    "# Agregar Session = \"RACE\" (para compatibilidad con add_basic_features)\n",
+    "# Agregar Session = \"RACE\" (para que sea compatible con add_basic_features)\n",
     "df_rep[\"Session\"] = \"RACE\"\n",
     "\n",
     "# Nos quedamos con columnas relevantes\n",
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b25b0bc3",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,6 @@
     "\n",
     "X_rep = pipe_rep.fit_transform(df)\n",
     "\n",
-    "# Convertir a denso si sale sparse\n",
     "if hasattr(X_rep, \"toarray\"):\n",
     "    X_rep = X_rep.toarray()\n",
     "\n",
@@ -878,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "946694a4",
    "metadata": {},
    "outputs": [
@@ -902,7 +901,7 @@
     "\n",
     "for K in Ks:\n",
     "    kmeans = KMeans(n_clusters=K, random_state=42, n_init=10)\n",
-    "    kmeans.fit(Z2)  # por ejemplo Z2 = PCA 2D\n",
+    "    kmeans.fit(Z2)  \n",
     "    inertias.append(kmeans.inertia_)\n",
     "\n",
     "plt.plot(Ks, inertias, marker=\"o\")\n",
@@ -923,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "36c7e6d6",
    "metadata": {},
    "outputs": [
@@ -943,7 +942,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import homogeneity_score, adjusted_rand_score\n",
     "\n",
-    "K = 4 # Elegido según el elbow\n",
+    "K = 4 # Elegido por nosotros según el elbow\n",
     "\n",
     "kmeans = KMeans(n_clusters=K, random_state=42, n_init=10)\n",
     "clusters = kmeans.fit_predict(Z2)\n",
@@ -1242,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b1526575",
    "metadata": {},
    "outputs": [
@@ -1282,18 +1281,18 @@
     "    cluster_means.append(mean_k)\n",
     "    print(f\"Cluster {k}: mean LapTime_s = {mean_k:.3f} s\")\n",
     "\n",
-    "# Identificar cuál es el cluster \"rápido\" (menor tiempo medio)\n",
+    "# Identifico cuál es el cluster \"rápido\"\n",
     "fast_cluster_id = int(np.argmin(cluster_means))\n",
     "slow_cluster_id = 1 - fast_cluster_id\n",
     "\n",
     "print(f\"\\nCluster rápido  : {fast_cluster_id}\")\n",
     "print(f\"Cluster lento   : {slow_cluster_id}\")\n",
     "\n",
-    "# Crear columna con etiquetas legibles\n",
+    "# Creo columna con etiquetas legibles\n",
     "pace_labels = np.where(pace_clusters == fast_cluster_id, \"FAST\", \"SLOW\")\n",
     "df[\"pace_cluster\"] = pace_labels\n",
     "\n",
-    "# Silhouette para ver qué tan separaditos están\n",
+    "# Silhouette para ver qué tan separados están\n",
     "sil = silhouette_score(lap_times, pace_clusters)\n",
     "print(f\"\\nSilhouette score (K=2, LapTime_s): {sil:.3f}\")\n",
     "print(df[\"pace_cluster\"].value_counts())\n"
