--- a/Simulador_opt_strat.ipynb
+++ b/Simulador_opt_strat.ipynb
@@ -51,9 +51,7 @@
       "req            INFO \tUsing cached data for position_data\n",
       "req            INFO \tUsing cached data for weather_data\n",
       "req            INFO \tUsing cached data for race_control_messages\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['4', '16', '81', '1', '44', '6', '31', '30', '23', '55', '63', '87', '43', '5', '18', '27', '22', '12', '14', '10']\n",
-      "c:\\Users\\Franc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\fastf1\\core.py:3183: FutureWarning: pick_driver is deprecated and will be removed in a future release. Use pick_drivers instead.\n",
-      "  warnings.warn((\"pick_driver is deprecated and will be removed\"\n"
+      "core           INFO \tFinished loading data for 20 drivers: ['4', '16', '81', '1', '44', '6', '31', '30', '23', '55', '63', '87', '43', '5', '18', '27', '22', '12', '14', '10']\n"
      ]
     },
     {
@@ -68,6 +66,14 @@
       "4        5.0 0 days 00:01:19.999000     HARD       5.0    1.0           1\n",
       "Última vuelta: 76.0\n",
       "Filas: 76\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Franc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\fastf1\\core.py:3183: FutureWarning: pick_driver is deprecated and will be removed in a future release. Use pick_drivers instead.\n",
+      "  warnings.warn((\"pick_driver is deprecated and will be removed\"\n"
      ]
     }
    ],
@@ -738,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "39a436b9",
    "metadata": {},
    "outputs": [
@@ -782,8 +788,8 @@
       "=== RESUMEN ===\n",
       "Posición real de Colapinto: P14 (76 vueltas)\n",
       "Posición con mejor estrategia: P9 (76 vueltas)\n",
-      "✓ Ganancia potencial: 5 posiciones\n",
-      "✓ Tiempo ahorrado: 116.993s (1.539s por vuelta)\n"
+      "Ganancia potencial: 5 posiciones\n",
+      "Tiempo ahorrado: 116.993s (1.539s por vuelta)\n"
      ]
     },
     {
@@ -858,6 +864,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Franc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\fastf1\\core.py:3183: FutureWarning: pick_driver is deprecated and will be removed in a future release. Use pick_drivers instead.\n",
+      "  warnings.warn((\"pick_driver is deprecated and will be removed\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -892,14 +906,6 @@
       "\n",
       "Diferencia simulación vs realidad: 76.566s\n",
       "Mejora potencial (simulada): 40.427s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Franc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\fastf1\\core.py:3183: FutureWarning: pick_driver is deprecated and will be removed in a future release. Use pick_drivers instead.\n",
-      "  warnings.warn((\"pick_driver is deprecated and will be removed\"\n"
      ]
     }
    ],
